[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiertotie"
version = "2022.11.20"
description = "Detour (Finnish: kiertotie) per rsync proxy to https mirror node."
readme = "README.md"
authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["developer-tools", "validation", "verification"]
dependencies = [
    "Babel >= 2.11.0",
    "PyYAML >= 6.0",
    "typer >= 0.7.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "coverage", "flake8", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-flake8"]

[project.urls]
Homepage = "https://git.sr.ht/~sthagen/kiertotie"
Bug-Tracker = "https://todo.sr.ht/~sthagen/kiertotie"
Documentation = "https://codes.dilettant.life/docs/kiertotie"
Source-Code = "https://git.sr.ht/~sthagen/kiertotie"
Test-Coverage = "https://codes.dilettant.life/coverage/kiertotie"

[project.scripts]
kiertotie = "kiertotie.cli:main"

[tool.setuptools.packages.find]
include = ["kiertotie"]
exclude = ["test*"]

[bdist_wheel]
universal = true

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py310", "py311"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/__main__.py",
]

[tool.flake8]
max-line-length = 120
max-complexity = 42
ignore = [
    "E203", 
    "W503",
]
inline-quotes = "single"
multiline-quotes = "double double double"
builtins = [
    "_"
]

[tool.isort]
line_length = 120
known_first_party = "kiertotie"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.mypy]
strict = true
implicit_reexport = true

[tool.pytest]
testpaths = "test"
filterwarnings = "error"
